# ifrit

./: .gitignore  Guardfile  LICENSE  README.md  ifrit.cabal
src/hs/: Main.hs
src/hs/Ifrit/: Framework.hs
src/hs/Ifrit/Client/: Dummy.hs  Pushover.hs
src/hs/Network/Client/: Pushover.hs
test/hs/: SpecSpec.hs
test/hs/Ifrit/Client/: DummySpec.hs
